# FlowBotHD

./: .gitignore  CITATION.cff  README.md  demo.ipynb  demo.py  pyproject.toml  requirements.txt
assets/point_clouds/: current_pcd.npy  history_flow.npy  history_pcd.npy
configs/: _logging.yaml  eval.yaml  eval_history.yaml  eval_sim.yaml  train.yaml
configs/dataset/: flow3d.yaml  trajectory.yaml
configs/inference/: trajectory_diffuser_dgdit.yaml  trajectory_diffuser_dit.yaml  trajectory_diffuser_hisdit.yaml  trajectory_diffuser_hispndit.yaml  trajectory_diffuser_pn++.yaml  trajectory_diffuser_pndit.yaml
configs/model/: diffuser_pndit.yaml
configs/training/: flow3d_diffuser_pndit.yaml
docs/: mkdocs.yml
docs/docs/: index.md
logs/eval_history_trajectory_diffuser_hispndit/2024-11-02/23-10-34/.hydra/: hydra.yaml
logs/eval_history_trajectory_diffuser_hispndit/2024-11-02/23-10-56/.hydra/: config.yaml  hydra.yaml
logs/eval_history_trajectory_diffuser_hispndit/2024-11-02/23-10-56/wandb/: latest-run
logs/eval_history_trajectory_diffuser_hispndit/2024-11-02/23-12-39/.hydra/: hydra.yaml
logs/eval_history_trajectory_diffuser_hispndit/2024-11-02/23-12-39/wandb/: latest-run
logs/eval_history_trajectory_diffuser_hispndit/2024-11-02/23-14-56/.hydra/: hydra.yaml
logs/eval_history_trajectory_diffuser_hispndit/2024-11-02/23-14-56/wandb/: latest-run
logs/eval_history_trajectory_diffuser_hispndit/2024-11-02/23-15-19/.hydra/: hydra.yaml
logs/eval_history_trajectory_diffuser_hispndit/2024-11-02/23-15-19/wandb/: latest-run
logs/eval_history_trajectory_diffuser_hispndit/2024-11-02/23-15-40/.hydra/: hydra.yaml
logs/eval_history_trajectory_diffuser_hispndit/2024-11-02/23-15-40/wandb/: latest-run
logs/eval_history_trajectory_diffuser_hispndit/2024-11-02/23-19-55/.hydra/: hydra.yaml
logs/eval_history_trajectory_diffuser_hispndit/2024-11-02/23-19-55/wandb/: latest-run
logs/eval_history_trajectory_diffuser_hispndit/2024-11-02/23-20-58/.hydra/: hydra.yaml
logs/eval_history_trajectory_diffuser_hispndit/2024-11-02/23-20-58/wandb/: latest-run
logs/sim_demo_trajectory_diffuser_hispndit/2024-11-02/23-25-17/.hydra/: config.yaml  hydra.yaml
logs/train_trajectory_diffuser_hispndit/2024-11-02/22-23-47/.hydra/: config.yaml  (+1 more)
notebooks/: diffuser_inference.ipynb  flowbot_inference.ipynb  flowbot_simulation.ipynb  multimodal.ipynb
scripts/: eval.py  eval_diffuser.py  eval_diffuser_wta.py  eval_history_diffuser_wta.py  eval_sim.py  eval_sim_diffuser.py  eval_sim_diffuser_history.py  eval_sim_gt.py  multimodal_diffuser.py  test_flow3d.py  train.py
scripts/preprocessing/: delta_to_flow_3d.py  flow_3d.py  run_delta.sh
src/flowbothd.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/flowbothd/datasets/: flow_3d.py  flow_3d_dataset.py  flow_3d_dataset_pyg.py  flow_trajectory.py  flow_trajectory_dataset.py  flow_trajectory_dataset_pyg.py
src/flowbothd/metrics/: trajectory.py
src/flowbothd/models/: flow_diffuser_dgdit.py  flow_diffuser_dit.py  flow_diffuser_hisdit.py  flow_diffuser_hispndit.py  flow_diffuser_pndit.py  flow_trajectory_diffuser.py  flow_trajectory_predictor.py
src/flowbothd/models/diffusion/: diffuser.py  diffuser_synthetic.py  eval.py  history_diffuser.py  history_model.py  inference.ipynb  model.py  simulation.ipynb  simulation.py
src/flowbothd/models/modules/: dit_models.py  history_encoder.py
src/flowbothd/simulations/: simulation.py  suction.py
(+95 files in other folders)
